<resources>
    <string name="app_name">Mi Banca App</string>
    <string name="title_cards">Cards Module</string>
    <string name="title_features">Features</string>
    <string name="title_storage">Storage</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="header_welcome">Bienvenido a Mi Banca App</string>
    <string name="to_start_text">A continuación ingresa tus datos para crear una cuenta con nosotros y comenzar a distrutar de nuestros servicios.</string>
    <string name="tu_nombre_hint">Tu nombre completo</string>

    <string name="toast_introduce_real_name">Introduce tu nombre completo</string>
    <string name="toast_introduce_name">El nombre de usuario debe contener al menos 6 caracteres alfanuméricos</string>
    <string name="toast_introduce_passw">La contraseña debe contener al menos 6 caracteres alfanuméricos</string>
    <string name="success_register">Registro exitoso!</string>
    <string name="register_failed">Ha ocurrido un error al registrar</string>
    <string name="error_login">Usuario y/o contraseña incorrectos</string>
    <string name="no_data_error">Por favor ingresa tu correo y contraseña</string>
    <string name="no_user_error">No existe el usuario</string>
    <string name="accept_permissions">Acepta los permisos para continuar utilizando Mi Banca App</string>
    <string name="bad_num_card">Ingresa los 16 dígitos de la tarjeta</string>
    <string name="bad_month">Ingresa un mes válido en formato mm</string>
    <string name="bad_year_1">Ingresa un año correcto en el formato yyyy</string>
    <string name="bad_year_2">Ingresa un año válido, no puede ser el actual o anterior</string>
    <string name="register_success">Tarjeta registrada</string>
    <string name="no_cards_found">No tienes tarjetas registradas</string>
    <string name="no_card_selected">Selecciona una de tus tarjetas para pagar</string>
    <string name="no_recip_card">Ingresa correctamente los 16 digitos de la tarjeta destino</string>
    <string name="no_recip_name">Ingresa el nombre completo del beneficiario</string>
    <string name="no_reason">Ingresa más de 3 caracteres como motivo de pago</string>
    <string name="location_error">Ocurrió un error al obtener la ubicación</string>
    <string name="payment_success">Pago realizado</string>
    <string name="no_transactions_found">Aún no tienes movimientos. En la sessión de pagos puedes realizar movimientos</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="my_account">Mi Cuenta</string>
    <string name="do_payment">Hacer un pago</string>
    <string name="select_a_card">Selecciona la tarjeta con la que deseas pagar:</string>
    <string name="select_a_card_hint">Selecciona una tarjeta</string>
    <string name="insert_benef_data">Ingresa los datos del beneficiario:</string>
    <string name="numcard_hint">Número de tarjeta (16 dígitos)</string>
    <string name="name_benef">Nombre del destinatario</string>
    <string name="motivo_del_pago">Motivo del pago</string>
    <string name="pay">Pagar</string>
    <string name="My_cards">Mis tarjetas</string>
    <string name="btn_new_card">Nueva tarjeta</string>
    <string name="My_trans">Mis movimientos</string>
    <string name="ingresa_los_datos_de_la_tarjeta">Ingresa los datos de la tarjeta</string>
    <string name="introduce_los_16_d_gitos_de_la_tarjeta">Introduce los 16 dígitos de la tarjeta</string>
    <string name="card_number_hint">Número de tarjeta</string>
    <string name="exp_date_hint">Introduce la fecha de vencimiento:</string>
    <string name="month_hint">Mes (MM)</string>
    <string name="year_hint">Año (yyyy)</string>
    <string name="registrar_tarjeta">Registrar tarjeta</string>
    <string name="card">Tarjeta:</string>
    <string name="card_number">Número de Tarjeta</string>
    <string name="exp_date">Fecha de Expiración</string>
</resources>