<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/dimen32dp"
        android:layout_height="@dimen/dimen32dp"
        android:layout_marginTop="@dimen/dimen24dp"
        android:layout_marginEnd="@dimen/dimen32dp"
        android:elevation="@dimen/dimen3dp"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnNewCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMyCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen32dp"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/ingresa_los_datos_de_la_tarjeta"
            android:textColor="@color/primaryVariant"
            android:textSize="@dimen/dimen18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen8dp"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/introduce_los_16_d_gitos_de_la_tarjeta"
            android:textSize="@dimen/dimen14sp" />

        <!-- Número de tarjeta -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCardNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen32dp"
                android:hint="@string/card_number_hint"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen8dp"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/exp_date_hint"
            android:textSize="@dimen/dimen14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen16dp"
                android:hint="@string/month_hint"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen32dp"
                android:hint="@string/year_hint"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnNewCard"
        style="@style/button_accept_gral"
        android:layout_width="@dimen/dimen0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen16dp"
        android:layout_marginVertical="@dimen/dimen32dp"
        android:text="@string/registrar_tarjeta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>